add new function

--- a/calculator.html
+++ b/calculator.html
@@ -60,7 +60,16 @@
     function getDays(y,m){
        return new Date(y,m,0).getDate();
     }
+     
 
+    function getAge(){
+        
+        if(getDays == 30){
+
+            return 
+        }
+        return "welcome to the hell"
+    }
 
 </script>
 </body>
